# libirrep

./: .clang-format  .editorconfig  .gitignore  CHANGELOG.md  CITATION.cff  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Doxyfile  LICENSE  Makefile  NOTICE  README.md  SECURITY.md  TODO.md  default.profraw
.github/workflows/: ci.yml  release.yml
abi/baseline/: ABI_HASH.macos-arm64
benchmarks/: bench_clebsch_gordan.c  bench_downstream_shapes.c  bench_equivariance.c  bench_point_group.c  bench_radial.c  bench_space_group.c  bench_spherical_harmonics.c  bench_tensor_product.c  bench_wigner_d.c  harness.h  run_benchmarks.sh
benchmarks/results/baseline/: README.md  darwin-arm64.json  darwin-x86_64-rosetta.json
benchmarks/results/coverage/: 2026-04-19-baseline.txt
benchmarks/results/e3nn_compare/: 2026-04-21-darwin-arm64.txt
benchmarks/results/fuzz/: 2026-04-19-seed42-1M.txt
docs/: API.md  DESIGN.md  METHODS.md  MIGRATION_FROM_E3NN.md  MOONLAB_INTEGRATION.md  PHYSICS_APPENDIX.md  PHYSICS_RESULTS.md  REFERENCES.md
docs/tutorials/: 01_rotations.md  02_spherical_harmonics.md  03_clebsch_gordan.md  04_wigner_d.md  05_tensor_products.md  06_equivariant_nn.md  07_kagome_nqs_substrate.md  08_materials_search.md  README.md
examples/: EXPECTED_OUTPUT.md  b20_chiral_4site_ed.c  bench_sparse_lanczos.c  cubic_crystal_field.c  dmi_kagome_pattern.c  dmi_pyrochlore_pattern.c  ed_cache_demo.c  equivariant_mlp.c  heisenberg4_ed.c  j1j2_gamma_sweep.c  j1j2_square_sector_ed.c  kagome12_ed.c  kagome12_entanglement.c  kagome12_k_resolved_ed.c  kagome12_symmetry_ed.c  kagome18_ed.c  kagome18_entanglement.c  kagome24_audit.c  kagome24_ed.c  kagome24_entanglement.c  kagome24_es.c  kagome24_gamma_bootstrap.c  kagome24_kp_gamma.c  kagome24_mes4_doublet.c  kagome24_mes4_scaling.c  kagome24_mes_gamma.c  kagome24_mes_scaling.c  kagome24_modular_s.c  kagome24_tower.c  kagome24_tower_F.c  kagome24_true_gs.c  kagome24_true_zgt.c  kagome27_entanglement.c  kagome27_sector_ed.c  kagome_a1_projection.c  kagome_arealaw_all.c  kagome_arealaw_gamma.c  kagome_correlation_length.c  kagome_dimer_correlation.c  kagome_structure_factor.c  (+24 more)
include/irrep/: clebsch_gordan.h  config_project.h  dmi.h  dmi_hamiltonian.h  equivariant_layers.h  export.h  hamiltonian.h  irrep.h  lattice.h  lattice3d.h  multiset.h  multiset_2j.h  nequip.h  parity.h  point_group.h  quadrature.h  radial.h  rdm.h  recoupling.h  simd.h  so3.h  solid_harmonics.h  space_group.h  spherical_harmonics.h  spin_project.h  su2.h  sym_group.h  tensor_product.h  time_reversal.h  types.h  version.h  wigner_d.h
release/: BASELINE_ABI_HASH
scripts/: bench_vs_e3nn.py  build_release.sh  check_abi.sh  fetch_lebedev_tables.sh  generate_abi_hash.sh  libirrep.pc.in  make_sbom.sh  perf_compare.sh  publish.sh  release.sh
src/: clebsch_gordan.c  config_project.c  dmi.c  dmi_hamiltonian.c  equivariant_layers.c  error.c  hamiltonian.c  lattice.c  lattice3d.c  multiset.c  multiset_2j.c  nequip.c  nequip_spec.c  parity.c  point_group.c  quadrature.c  quadrature_lebedev_data.c  radial.c  radial_avx2.c  radial_neon.c  rdm.c  recoupling.c  rep_table.c  simd_runtime.c  so3.c  solid_harmonics.c  space_group.c  spherical_harmonics.c  spherical_harmonics_avx2.c  spherical_harmonics_neon.c  spin_project.c  su2.c  sym_group.c  tensor_product.c  tensor_product_2j.c  tensor_product_avx2.c  tensor_product_neon.c  time_reversal.c  version.c  wigner_d.c  (+2 more)
src/internal/: dispatch.h
tests/: harness.h  test_canonicalise.c  test_cg_invariants.c  test_clebsch_gordan.c  test_config_project.c  test_dmi.c  test_dmi_hamiltonian.c  test_downstream_compat.c  test_equivariant_layers.c  test_error_paths.c  test_hamiltonian.c  test_lanczos_reorth.c  test_lattice.c  test_lattice3d.c  test_lebedev_registry.c  test_little_group.c  test_multiset.c  test_multiset_2j.c  test_nequip.c  test_nequip_from_spec.c  test_parity.c  test_point_group.c  test_quadrature.c  test_radial.c  test_rdm.c  test_rdm_batch.c  test_recoupling.c  test_rep_table.c  test_so3.c  test_solid_harmonics.c  test_space_group.c  test_sparse_apply.c  test_spherical_harmonics.c  test_spin_project.c  test_su2.c  test_sym_group.c  test_tensor_product.c  test_tensor_product_2j.c  test_time_reversal.c  test_tp_batch_flat.c  (+4 more)
tests/fuzz/: driver.c  fuzz_cg.c  fuzz_lattice_build.c  fuzz_multiset_parse.c  fuzz_nequip_apply_forces.c  fuzz_nequip_from_spec.c  fuzz_pg_project.c  fuzz_tp_apply.c
tests/reference_data/: cg_reference.h
tests/test_downstream_compat/: README.md  generate_lattice_connectivity.c  lattice_loader.c  lattice_loader.h
tests/test_downstream_compat/torque_net_tp_paths/: generate_golden.c  vectors.json
